# zpl-forge

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: publish.yml  release-pr.yml  release-tag.yml  rust.yml
docs/: README_ES.md
examples/: EXAMPLES.md  basic.rs  custom_fonts.rs  repro_fr.rs  zpl_showcase.rs
examples/fonts/: download_fonts.sh
src/: error.rs  lib.rs
src/assets/: IOSEVKA_LICENSE.txt  OCRA_LICENSE.txt  OCRB_LICENSE.txt  OFL.txt  TEX_GYRE_HEROS_LICENSE.txt
src/ast/: cmd.rs  commons.rs  mod.rs
src/ast/parser/: custom.rs  mod.rs  standard.rs
src/engine/: backend.rs  common.rs  engine.rs  font.rs  intr.rs  mod.rs  state.rs
src/forge/: mod.rs  pdf.rs  pdf_native.rs  png.rs
src/tools/: mod.rs
tests/: custom_fonts_test.rs  encoding_test.rs  error_reporting.rs  integration_test.rs  pdf_native_test.rs
tools/: calibrate.py
