[package]
name = "zpl-forge"
version = "0.1.1"
edition = "2021"
description = "A fast, memory-safe ZPL (Zebra Programming Language) parser and renderer."
repository = "https://github.com/rafael-arreola/zpl-forge"
homepage = "https://github.com/rafael-arreola/zpl-forge"
documentation = "https://docs.rs/zpl-forge"
license = "MIT OR Apache-2.0"
keywords = ["zpl", "zebra", "barcode", "parser", "graphics"]
categories = ["parsing", "rendering"]
readme = "README.md"
authors = ["Rafael Arreola <rafael-arreola@outlook.com>"]
exclude = ["examples/*", "tests/*", "docs/*", ".github/*", "*.png", "*.pdf"]

[dependencies]

ab_glyph = "0.2.32"
font-loader = "0.11.0"
image = "0.25"
imageproc = "0.26.1"
nom = "8.0"
base64 = "0.22.1"
rxing = "0.8.5"
tracing = "0.1"
hex = "0.4.3"
thiserror = "2.0"
rayon = "1.12"
lopdf = "0.40"
flate2 = "1.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.dev]
opt-level = 3
debug = true
incremental = true
