[package]
name = "zpl-forge"
version = "0.3.1"
edition = "2024"
description = "A fast, memory-safe ZPL (Zebra Programming Language) parser and renderer."
repository = "https://github.com/rafael-arreola/zpl-forge"
homepage = "https://github.com/rafael-arreola/zpl-forge"
documentation = "https://docs.rs/zpl-forge"
license = "MIT OR Apache-2.0"
keywords = ["zpl", "zebra", "barcode", "parser", "graphics"]
categories = ["parsing", "rendering"]
readme = "README.md"
authors = ["Rafael Arreola <rafael-arreola@outlook.com>"]
exclude = [
    "examples/*",
    "tests/*",
    "tools/*",
    "docs/*",
    ".github/*",
    "*.png",
    "*.pdf",
]

[dependencies]

ab_glyph = "0.2.32"
nom = "8.0"
thiserror = "2.0"

image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
], optional = true }
# default-features off: defaults re-enable image's full codec stack plus fft;
# we only need the drawing primitives and `text` (draw_text_mut).
imageproc = { version = "0.27", default-features = false, features = [
    "text",
    "rayon",
], optional = true }
base64 = { version = "0.22.1", optional = true }
# default-features off: we only use the barcode *encoder* (MultiFormatWriter);
# rxing's defaults pull the full image decode stack (avif/rav1e, exr, tiff...).
# `encoding_rs` is mandatory for its CharacterSet support. Since 0.9 the
# encoders and each symbology family are opt-in features; we enable only the
# formats zpl-forge emits (skipping aztec/maxicode and all decoders).
rxing = { version = "0.9", default-features = false, features = [
    "encoding_rs",
    "encoders",
    "oned",
    "qrcode",
    "datamatrix",
    "pdf417",
], optional = true }
tracing = { version = "0.1", optional = true }
# default-features off: defaults pull three date-time crates (chrono, jiff, time);
# we only write PDFs and don't stamp creation dates. `font_embedding` gates
# lopdf::FontData (ttf-parser), used to embed TTFs in the native PDF backend.
lopdf = { version = "0.44", default-features = false, features = [
    "font_embedding",
], optional = true }
flate2 = { version = "1.1", optional = true }

[features]
default = ["png", "pdf"]
# PNG raster backend (image + imageproc + barcode generation)
png = ["dep:image", "dep:imageproc", "dep:rxing", "dep:base64"]
# Native vector PDF backend (lopdf + flate2 + barcode generation)
pdf = ["dep:lopdf", "dep:flate2", "dep:image", "dep:rxing", "dep:base64"]
# Internal debug logging via the `tracing` crate
tracing = ["dep:tracing"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.dev]
opt-level = 3
debug = true
incremental = true
